overflow y issue fixed

--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -8,6 +8,7 @@ body {
   position: relative;
   width: auto;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 header {
   position: fixed;
